[package]
name = "submerge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.21.0"
log = "0.4.29"
octocrab = "0.53.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.23.0"
